--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
-    ,"jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
